# flatbuffers

./: .gitignore
rust/flatbuffers/: Cargo.toml
rust/flatbuffers/src/: array.rs  builder.rs  lib.rs  verifier.rs
samples/: monster_generated.rs
src/: idl_gen_rust.cpp
tests/: LuaTest.sh  RustTest.sh  arrays_test_generated.rs  generate_code.sh  monster_test_generated.rs  more_defaults_generated.rs  optional_scalars_generated.rs
tests/include_test/sub/: include_test2_generated.rs
tests/namespace_test/: namespace_test1_generated.rs  namespace_test2_generated.rs
tests/rust_usage_test/: Cargo.toml
tests/rust_usage_test/outdir/: Cargo.toml
