[package]
name = "outdir"
version = "0.1.0"
authors = ["Casper Neo <cneo@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = { path = "../../../rust/flatbuffers" }
num-derive = "0.3.3"
num-traits = "0.2.14"
